# dashtam-cli

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  WARP.md  pyproject.toml
src/dashtam_cli/: __init__.py  main.py
tests/unit/: test_version.py
